# urlShortener

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: url-shortener.postman_collection.json
url_shortener/shortener/: models.py  serializers.py  tests.py  urls.py  views.py
url_shortener/shortener/migrations/: 0001_initial.py
url_shortener/url_shortener/: settings.py  urls.py
